--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/basic.scss
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/basic.scss
@@ -516,6 +516,11 @@ p {
     border-bottom: 0;
 }
 
+.form_title {
+    visibility: hidden;
+    margin: 0;
+}
+
 .panel {
     position: relative;
     background-color: $panelBackgroundColor;
