--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/modules_selection.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/modules_selection.html.twig
@@ -1,4 +1,4 @@
-<h3>{% trans %}modules_selection_1{% endtrans %}</h3>
+<h3 class="form_title">{% trans %}modules_selection_1{% endtrans %}</h3>
 <div id="cp_modules_selection_desktop" class="display_desktop">
     <div id="cp_modules_selection_desktop_result">
         {{-include("@UebusaitoBundleViews/render/control_panel/modules_selection_desktop.html.twig")-}}
@@ -21,5 +21,4 @@
         </div>
     </div>
 </div>
-
 <div id="cp_module_selection_result"></div>
