--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/page_profile.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/page_profile.html.twig
@@ -2,7 +2,7 @@
 
 <div class="row">
     <div class="col-md-12">
-        <h3>{% trans %}page_profile_1{% endtrans %}</h3>
+        <h3 class="form_title">{% trans %}page_profile_1{% endtrans %}</h3>
 
         {{-render(controller("UebusaitoBundle:Language:page", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
 
