--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/payments_selection.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/payments_selection.html.twig
@@ -2,12 +2,11 @@
     {{-render(controller("UebusaitoBundle:ControlPanel\\Payment:userSelection", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
 {% endif %}
 
-<h3>{% trans %}payments_selection_1{% endtrans %}</h3>
+<h3 class="form_title">{% trans %}payments_selection_1{% endtrans %}</h3>
 <div id="cp_payments_selection_desktop" class="display_desktop">
     <div id="cp_payments_selection_desktop_result">
         {{-include("@UebusaitoBundleViews/render/control_panel/payments_selection_desktop.html.twig")-}}
     </div>
-    
     <button id="cp_payments_selection_send" class="button_custom" type="button">{% trans %}button_4{% endtrans %}</button>
 </div>
 <div id="cp_payments_selection_mobile" class="display_mobile">
@@ -25,5 +24,4 @@
         </div>
     </div>
 </div>
-
 <div id="cp_payment_selection_result"></div>
