--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/roles_selection.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/roles_selection.html.twig
@@ -1,9 +1,8 @@
-<h3>{% trans %}roles_selection_1{% endtrans %}</h3>
+<h3 class="form_title">{% trans %}roles_selection_1{% endtrans %}</h3>
 <div id="cp_roles_selection_desktop" class="display_desktop">
     <div id="cp_roles_selection_desktop_result">
         {{-include("@UebusaitoBundleViews/render/control_panel/roles_selection_desktop.html.twig")-}}
     </div>
-
     <button id="cp_roles_selection_send" class="button_custom" type="button">{% trans %}button_4{% endtrans %}</button>
 </div>
 <div id="cp_roles_selection_mobile" class="display_mobile">
@@ -21,5 +20,4 @@
         </div>
     </div>
 </div>
-
 <div id="cp_role_selection_result"></div>
