--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/user_deletion.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/user_deletion.html.twig
@@ -1,5 +1,3 @@
-<h3>{% trans %}user_deletion_1{% endtrans %}</h3>
-
+<h3 class="form_title">{% trans %}user_deletion_1{% endtrans %}</h3>
 <p>{% trans %}user_deletion_2{% endtrans %}</p>
-
 <button id="cp_user_deletion" class="button_custom_danger" type="button">{% trans %}button_2{% endtrans %}</button>
