--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/module_creation.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/module_creation.html.twig
@@ -2,7 +2,7 @@
 
 <div class="row">
     <div class="col-md-6">
-        <h3>{% trans %}module_creation_1{% endtrans %}</h3>
+        <h3 class="form_title">{% trans %}module_creation_1{% endtrans %}</h3>
         <form id="form_cp_module_creation" action="{{path("cp_module_creation", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
             <div class="form-group">
                 {{form_label(form.position, "module_creation_2")}}
@@ -12,7 +12,6 @@
                     {{form_widget(form.position)}}
                 </div>
             </div>
-            
             <div class="form-group">
                 {{form_label(form.name, "module_creation_3")}}
                 <div class="input-group">
