--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/modules_drag.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/modules_drag.html.twig
@@ -2,10 +2,8 @@
 
 <div class="row">
     <div class="col-md-6">
-        <h3>{% trans %}modules_drag_1{% endtrans %}</h3>
-        
+        <h3 class="form_title">{% trans %}modules_drag_1{% endtrans %}</h3>
         <input id="modules_drag_switch" type="checkbox" data-on-color="success" data-off-color="danger">
-        
         <form id="form_cp_modules_drag" action="{{path("cp_modules_drag", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
             {{form_widget(form.sortHeader, {'label': "modules_drag_2"})}}
             {{form_widget(form.sortLeft, {'label': "modules_drag_3"})}}
