--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/page_creation.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/page_creation.html.twig
@@ -2,7 +2,7 @@
 
 <div class="row">
     <div class="col-md-12">
-        <h3>{% trans %}page_creation_1{% endtrans %}</h3>
+        <h3 class="form_title">{% trans %}page_creation_1{% endtrans %}</h3>
         <form id="form_cp_page_creation" action="{{path("cp_page_creation", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
             <div class="form-group">
                 {{form_label(form.alias, "page_creation_2")}}
