--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/payment_profile.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/payment_profile.html.twig
@@ -1,7 +1,6 @@
 <div class="row">
     <div class="col-md-6">
-        <h3>{% trans %}payment_profile_1{% endtrans %}</h3>
-        
+        <h3 class="form_title">{% trans %}payment_profile_1{% endtrans %}</h3>
         <p><b>{% trans %}payment_profile_2{% endtrans %}:</b> {{response.values.payment.transaction}}</p>
         <p><b>{% trans %}payment_profile_3{% endtrans %}:</b> {{response.values.payment.date}}</p>
         <p><b>{% trans %}payment_profile_4{% endtrans %}:</b> {{response.values.payment.status}}</p>
