--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/payments_user_selection.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/payments_user_selection.html.twig
@@ -2,7 +2,7 @@
 
 <div class="row">
     <div class="col-md-6">
-        <h3>{% trans %}payments_user_selection_1{% endtrans %}</h3>
+        <h3 class="form_title">{% trans %}payments_user_selection_1{% endtrans %}</h3>
         <form id="form_cp_payments_user_selection" action="{{path("cp_payments_user_selection", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
             {{form_row(form.userId, {'label': "payments_user_selection_2"})}}
 
