--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/profile_password.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/profile_password.html.twig
@@ -2,7 +2,7 @@
 
 <div class="row">
     <div class="col-md-6">
-        <h3>{% trans %}profile_password_1{% endtrans %}</h3>
+        <h3 class="form_title">{% trans %}profile_password_1{% endtrans %}</h3>
         <form id="form_cp_profile_password" action="{{path("cp_profile_password", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
             <fieldset class="accordion_container">
                 <legend class="title"><i class="fa fa-chevron-circle-down icon"></i> {% trans %}profile_password_2{% endtrans %}</legend>
@@ -15,7 +15,6 @@
                             {{form_widget(form.old)}}
                         </div>
                     </div>
-
                     <div class="form-group">
                         {{form_label(form.new, "profile_password_4")}}
                         <div class="input-group">
@@ -24,7 +23,6 @@
                             {{form_widget(form.new)}}
                         </div>
                     </div>
-
                     <div class="form-group">
                         {{form_label(form.newConfirm, "profile_password_5")}}
                         <div class="input-group">
