--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/user_profile.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/user_profile.html.twig
@@ -2,7 +2,7 @@
 
 <div class="row">
     <div class="col-md-6">
-        <h3>{% trans %}user_profile_1{% endtrans %}</h3>
+        <h3 class="form_title">{% trans %}user_profile_1{% endtrans %}</h3>
         <form id="form_cp_user_profile" action="{{path("cp_user_profile", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
             <div class="form-group">
                 {{form_label(form.username, "user_profile_2")}}
@@ -61,7 +61,6 @@
                     {{form_widget(form.password)}}
                 </div>
             </div>
-            
             <div class="form-group">
                 {{form_label(form.passwordConfirm, "user_profile_19")}}
                 <div class="input-group">
