--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/layout/layout_site.html.twig
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/layout/layout_site.html.twig
@@ -1,9 +1,9 @@
-{% if (settingRow['template_style'] == 1) %}
-    {% set templateStyleColumnCenter = "8" %}
-{% elseif (settingRow['template_style'] == 2 or settingRow['template_style'] == 3) %}
-    {% set templateStyleColumnCenter = "10" %}
-{% elseif (settingRow['template_style'] == 4) %}
-    {% set templateStyleColumnCenter = "12" %}
+{% if (settingRow['template_column'] == 1) %}
+    {% set templateColumnCenter = "8" %}
+{% elseif (settingRow['template_column'] == 2 or settingRow['template_column'] == 3) %}
+    {% set templateColumnCenter = "10" %}
+{% elseif (settingRow['template_column'] == 4) %}
+    {% set templateColumnCenter = "12" %}
 {% endif %}
 <!DOCTYPE html>
 <html lang="{{app.request.getLocale()}}">
@@ -20,15 +20,15 @@
                 </div>
             </div>
             <div class="row">
-                {% if (settingRow['template_style'] == 1 or settingRow['template_style'] == 2) %}
+                {% if (settingRow['template_column'] == 1 or settingRow['template_column'] == 2) %}
                     <div class="col-md-2 container_left display_desktop">
                         {% block columnLeftContainer %}{% endblock %}
                     </div>
                 {% endif %}
-                <div class="col-md-{{templateStyleColumnCenter}} container_center">
+                <div class="col-md-{{templateColumnCenter}} container_center">
                     {% block columnCenterContainer %}{% endblock %}
                 </div>
-                {% if (settingRow['template_style'] == 1 or settingRow['template_style'] == 3) %}
+                {% if (settingRow['template_column'] == 1 or settingRow['template_column'] == 3) %}
                     <div class="col-md-2 container_right display_desktop">
                         {% block columnRightContainer %}{% endblock %}
                     </div>
