--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/basic.css
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/basic.css
@@ -25,7 +25,7 @@ legend { width: inherit; padding: 0 10px; border-bottom: none; }
 
 .word_break { -ms-word-break: break-all; word-break: break-all; -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto; }
 
-.shadow { -webkit-box-shadow: 0px 5px 5px #474747; -moz-box-shadow: 0px 5px 5px #474747; -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=0, Color='#474747')" !important; filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=0, Color='#474747')" !important; box-shadow: 0px 5px 5px #474747; }
+.shadow { -webkit-box-shadow: 0px 5px 5px #474747; -moz-box-shadow: 0px 5px 5px #474747; -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=0, Color='#474747')"; filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=0, Color='#474747')"; box-shadow: 0px 5px 5px #474747; }
 
 .position_relative { position: relative; }
 
@@ -123,7 +123,7 @@ legend { width: inherit; padding: 0 10px; border-bottom: none; }
   .navbar_fix .navbar-default .navbar-header .navbar_header_content .navbar-toggle.collapsed .top-bar { transform: rotate(0); }
   .navbar_fix .navbar-default .navbar-header .navbar_header_content .navbar-toggle.collapsed .middle-bar { opacity: 1; }
   .navbar_fix .navbar-default .navbar-header .navbar_header_content .navbar-toggle.collapsed .bottom-bar { transform: rotate(0); }
-  .navbar_fix .navbar-default .navbar-header .navbar_header_content .dropdown-menu { padding: 5px; background-color: #f4f4f4; border: 1px solid #e7e7e7; -webkit-box-shadow: 0px 5px 5px #474747; -moz-box-shadow: 0px 5px 5px #474747; -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=0, Color='#474747')" !important; filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=0, Color='#474747')" !important; box-shadow: 0px 5px 5px #474747; }
+  .navbar_fix .navbar-default .navbar-header .navbar_header_content .dropdown-menu { padding: 5px; background-color: #f4f4f4; border: 1px solid #e7e7e7; -webkit-box-shadow: 0px 5px 5px #474747; -moz-box-shadow: 0px 5px 5px #474747; -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=0, Color='#474747')"; filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=0, Color='#474747')"; box-shadow: 0px 5px 5px #474747; }
   .navbar_fix .navbar-default .navbar-header .navbar_header_content .dropdown-menu .panel, .navbar_fix .navbar-default .navbar-header .navbar_header_content .dropdown-menu .panel_clean { margin: 0 !important; padding: 0 !important; border: initial !important; }
   .navbar_fix .navbar-default .navbar-header .navbar_header_icon { padding-right: 2px; }
   .navbar_fix .navbar-default .navbar-header .navbar_header_icon .dropdown-toggle { margin-left: 0; margin-right: 0; }
@@ -176,7 +176,7 @@ p { margin: 0; }
 .navbar_fix .navbar-default .navbar-collapse .navbar-nav li.dropdown.open > a:hover { background-color: #337ab7; color: #ffffff; }
 .navbar_fix .navbar-default .navbar-collapse .navbar-nav li.dropdown.active > a { background-color: #73766f; color: #ffffff; }
 .navbar_fix .navbar-default .navbar-collapse .navbar-nav li.dropdown.active > a:hover { background-color: #337ab7; color: #ffffff; }
-.navbar_fix .navbar-default .navbar-collapse .navbar-nav li.dropdown ul.dropdown-menu { background-color: #f4f4f4; border: 1px solid #e7e7e7; border-radius: 0; -webkit-box-shadow: 0px 5px 5px #474747; -moz-box-shadow: 0px 5px 5px #474747; -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=0, Color='#474747')" !important; filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=0, Color='#474747')" !important; box-shadow: 0px 5px 5px #474747; }
+.navbar_fix .navbar-default .navbar-collapse .navbar-nav li.dropdown ul.dropdown-menu { background-color: #f4f4f4; border: 1px solid #e7e7e7; border-radius: 0; -webkit-box-shadow: 0px 5px 5px #474747; -moz-box-shadow: 0px 5px 5px #474747; -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=0, Color='#474747')"; filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=0, Color='#474747')"; box-shadow: 0px 5px 5px #474747; }
 .navbar_fix .navbar-default .navbar-collapse .navbar-nav li.dropdown ul.dropdown-menu li > a { background-color: initial; color: #000000; }
 .navbar_fix .navbar-default .navbar-collapse .navbar-nav li.dropdown ul.dropdown-menu li > a:hover { background-color: #337ab7; color: #ffffff; }
 .navbar_fix .navbar-default .navbar-collapse .navbar-nav li.dropdown ul.dropdown-menu li.active > a { background-color: #73766f; color: #ffffff; }
@@ -233,7 +233,7 @@ p { margin: 0; }
 
 .avatar { max-width: 150px; max-height: 150px; }
 
-.maintenance_authentication { display: block !important; position: initial !important; width: 320px !important; margin: auto !important; -webkit-box-shadow: 0px 5px 5px #474747; -moz-box-shadow: 0px 5px 5px #474747; -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=0, Color='#474747')" !important; filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=0, Color='#474747')" !important; box-shadow: 0px 5px 5px #474747; }
+.maintenance_authentication { display: block !important; position: initial !important; width: 320px !important; margin: auto !important; -webkit-box-shadow: 0px 5px 5px #474747; -moz-box-shadow: 0px 5px 5px #474747; -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=0, Color='#474747')"; filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=0, Color='#474747')"; box-shadow: 0px 5px 5px #474747; }
 
 .maintenance_content { position: relative; text-align: center; }
 .maintenance_content img { height: auto; }
