--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/basic.css
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/basic.css
@@ -139,7 +139,7 @@ legend { width: inherit; padding: 0 10px; border-bottom: none; }
   .maintenance_content p.text_2 { font-size: 4.5vw; }
   #panel_id_1 { margin-left: -15px; margin-right: -15px; } }
 @media (min-width: 1051px) { .button_authentication_desktop { display: none; position: absolute; top: 27px; right: 35px; color: #ffffff; cursor: pointer; z-index: 1010; }
-  .maintenance_content { margin: -20px 10px 20px 10px; }
+  .maintenance_content { margin: 0 10px 20px 10px; }
   .maintenance_content img { max-width: 60%; }
   .maintenance_content div { font-size: 2.2vw; }
   .maintenance_content p.text_1 { font-size: 2.5vw; }
@@ -259,7 +259,7 @@ p { margin: 0; }
 
 #panel_id_4 .module_settings { display: none !important; }
 #panel_id_4 .form-group { display: inline; margin-bottom: 0; }
-#panel_id_4 .form-group select { width: 70%; padding: 0; }
+#panel_id_4 .form-group select { width: 45%; padding: 0; }
 
 #panel_id_5 .module_settings { display: none !important; }
 #panel_id_5 .form-group { margin-bottom: 0; }
