--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/basic.scss
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/basic.scss
@@ -268,7 +268,7 @@ $footerColor: #ffffff;
     }
     
     .maintenance_content {
-        margin: -20px 10px 20px 10px;
+        margin: 0 10px 20px 10px;
         
         img {
             max-width: 60%;
@@ -793,7 +793,7 @@ p {
         margin-bottom: 0;
         
         select {
-            width: 70%;
+            width: 45%;
             padding: 0;
         }
     }
