--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/page_creation.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/page_creation.html.twig
@@ -40,8 +40,8 @@
                 {{form_row(form.sort)}}
                 <div id="page_menu_sort">
                     <div class="horizontal_center">
-                        <i id="module_profile_sort_button_up" class="fa fa-caret-square-o-up button_sort"></i>
-                        <i id="module_profile_sort_button_down" class="fa fa-caret-square-o-down button_sort"></i>
+                        <i id="page_sort_button_up" class="fa fa-caret-square-o-up button_sort"></i>
+                        <i id="page_sort_button_down" class="fa fa-caret-square-o-down button_sort"></i>
                     </div>
                 </div>
             </div>
