--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/basic.css
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/basic.css
@@ -153,7 +153,7 @@ table, .table { font-family: "pt_sans", sans-serif; font-size: 14px; }
 p { margin: 0; }
 
 .logo_big .logo_svg { width: 100px; }
-.logo_big .logo_text { font-family: "archivo_black", sans-serif; display: inline-block; position: relative; top: 14px; font-size: 40px; color: #4089c9; text-transform: uppercase; font-weight: bold; }
+.logo_big .logo_text { font-family: "archivo_black", sans-serif; display: inline-block; position: relative; top: 10px; font-size: 40px; color: #4089c9; text-transform: uppercase; font-weight: bold; }
 
 .logo_small .logo_svg { width: 30px; }
 .logo_small .logo_text { font-family: "archivo_black", sans-serif; display: inline-block; position: relative; font-size: 10px; color: #4089c9; text-transform: uppercase; font-weight: bold; }
@@ -270,9 +270,9 @@ p { margin: 0; }
 #search_render .box .title { text-decoration: underline; }
 #search_render .box .argument { margin: 0; }
 
-#form_page_positionInMenu { width: 50%; }
+#form_page_positionInMenu, #form_module_positionInColumn { width: 50%; }
 
-#page_menu_sort { position: relative; }
-#page_menu_sort div { position: absolute; top: -105px; left: 50%; width: 50px; }
+#page_menu_sort, #module_position_sort { position: relative; }
+#page_menu_sort div, #module_position_sort div { position: absolute; top: -105px; left: 50%; width: 50px; }
 
 /*# sourceMappingURL=basic.css.map */
