--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/basic.scss
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/basic.scss
@@ -332,7 +332,7 @@ p {
         font-family: "archivo_black", sans-serif;
         display: inline-block;
         position: relative;
-        top: 14px;
+        top: 10px;
         font-size: 40px;
         color: $logoTextColor;
         text-transform: uppercase;
@@ -833,10 +833,10 @@ p {
     }
 }
 
-#form_page_positionInMenu {
+#form_page_positionInMenu, #form_module_positionInColumn {
     width: 50%;
 }
-#page_menu_sort {
+#page_menu_sort, #module_position_sort {
     position: relative;
     
     div {
