--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/module_profile.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/module_profile.html.twig
@@ -3,7 +3,7 @@
 <div class="row">
     <div class="col-md-6">
         <h3 class="form_title">{% trans %}module_profile_1{% endtrans %}</h3>
-        <form id="form_cp_module_profile" action="{{path("cp_module_profile", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+        <form id="form_cp_module_profile" action="{{path("cp_module_profile_save", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
             <div class="display_mobile">
                 <div class="form-group">
                     {{form_label(form.position, "module_profile_2")}}
@@ -14,9 +14,18 @@
                     </div>
                 </div>
                 
-                {{form_row(form.sort, {'label': "module_profile_3"})}}
-                <div id="module_profile_sort" class="form-group">
-                    {{-include("@UebusaitoBundleViews/render/control_panel/module_profile_sort.html.twig")-}}
+                <div class="form-group">
+                    {{form_label(form.positionInColumn, "module_profile_3")}}
+                    {{form_errors(form.positionInColumn)}}
+                    {{form_widget(form.positionInColumn, {'attr': {'size': '8'}})}}
+
+                    {{form_row(form.sort)}}
+                    <div id="module_position_sort">
+                        <div class="horizontal_center">
+                            <i id="module_sort_button_up" class="fa fa-caret-square-o-up button_sort"></i>
+                            <i id="module_sort_button_down" class="fa fa-caret-square-o-down button_sort"></i>
+                        </div>
+                    </div>
                 </div>
             </div>
             
@@ -47,7 +56,7 @@
             <input class="button_custom" type="submit" value="{% trans %}button_3{% endtrans %}"/>
         </form>
         
-        {% if is_granted("ROLE_ADMIN") == true and urlExtra > 5 %}
+        {% if is_granted("ROLE_ADMIN") == true and response.values.id > 5 %}
             {{-include("@UebusaitoBundleViews/render/control_panel/module_deletion.html.twig")-}}
         {% endif %}
     </div>
