--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/role_profile.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/role_profile.html.twig
@@ -3,7 +3,7 @@
 <div class="row">
     <div class="col-md-6">
         <h3 class="form_title">{% trans %}role_profile_1{% endtrans %}</h3>
-        <form id="form_cp_role_profile" action="{{path("cp_role_profile", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+        <form id="form_cp_role_profile" action="{{path("cp_role_profile_result", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
             <div class="form-group">
                 {{form_label(form.level, "role_profile_2")}}
                 <div class="input-group">
@@ -18,7 +18,7 @@
             <input class="button_custom" type="submit" value="{% trans %}button_3{% endtrans %}"/>
         </form>
         
-        {% if is_granted("ROLE_ADMIN") == true and urlExtra > 2 %}
+        {% if is_granted("ROLE_ADMIN") == true and response.values.id > 2 %}
             {{-include("@UebusaitoBundleViews/render/control_panel/role_deletion.html.twig")-}}
         {% endif %}
     </div>
