--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/user_profile.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/user_profile.html.twig
@@ -3,19 +3,10 @@
 <div class="row">
     <div class="col-md-6">
         <h3 class="form_title">{% trans %}user_profile_1{% endtrans %}</h3>
-        <form id="form_cp_user_profile" action="{{path("cp_user_profile", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-            <div class="form-group">
-                {{form_label(form.username, "user_profile_2")}}
-                <div class="input-group">
-                    <span class="input-group-addon"><i class="fa fa-paw"></i></span>
-                    {{form_errors(form.username)}}
-                    {{form_widget(form.username)}}
-                </div>
-            </div>
-            
+        <form id="form_cp_user_profile" action="{{path("cp_user_profile_save", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
             {% if is_granted("ROLE_ADMIN") == true %}
                 <div id="form_user_roleId_wordTag_container" class="form-group">
-                    {{form_label(form.roleId, "user_profile_3")}}
+                    {{form_label(form.roleId, "user_profile_2")}}
                     {{form_errors(form.roleId)}}
                     {{form_widget(form.roleId)}}
                     <div class="input-group">
@@ -24,6 +15,15 @@
                     </div>
                 </div>
             {% endif %}
+            
+            <div class="form-group">
+                {{form_label(form.username, "user_profile_3")}}
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="fa fa-paw"></i></span>
+                    {{form_errors(form.username)}}
+                    {{form_widget(form.username)}}
+                </div>
+            </div>
             
             {{form_row(form.name, {'label': "user_profile_4"})}}
             {{form_row(form.surname, {'label': "user_profile_5"})}}
@@ -61,6 +61,7 @@
                     {{form_widget(form.password)}}
                 </div>
             </div>
+            
             <div class="form-group">
                 {{form_label(form.passwordConfirm, "user_profile_19")}}
                 <div class="input-group">
@@ -77,7 +78,7 @@
             <input class="button_custom" type="submit" value="{% trans %}button_3{% endtrans %}"/>
         </form>
         
-        {% if is_granted("ROLE_ADMIN") == true and urlExtra > 1 %}
+        {% if is_granted("ROLE_ADMIN") == true and response.values.id > 1 %}
             {{-include("@UebusaitoBundleViews/render/control_panel/user_deletion.html.twig")-}}
         {% endif %}
     </div>
