--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/users_selection.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/users_selection.html.twig
@@ -1,16 +1,80 @@
 <h3 class="form_title">{% trans %}users_selection_1{% endtrans %}</h3>
+
 <div id="cp_users_selection_desktop" class="display_desktop">
     <div id="cp_users_selection_desktop_result">
-        {{-include("@UebusaitoBundleViews/render/control_panel/users_selection_desktop.html.twig")-}}
+        {{-include("@UebusaitoBundleViews/include/table_and_pagination.html.twig")-}}
+
+        <div class="overflow_y_hidden">
+            <table class="table table-bordered table-striped">
+                <thead class="table_thead">
+                    <tr>
+                        <th class="cursor_pointer">
+                            {% trans %}users_selection_desktop_1{% endtrans %}
+                            <i class="fa fa-caret-down"></i>
+                            <i class="fa fa-caret-up"></i>
+                        </th>
+                        <th class="cursor_pointer">
+                            {% trans %}users_selection_desktop_2{% endtrans %}
+                            <i class="fa fa-caret-down"></i>
+                            <i class="fa fa-caret-up"></i>
+                        </th>
+                        <th class="cursor_pointer">
+                            {% trans %}users_selection_desktop_3{% endtrans %}
+                            <i class="fa fa-caret-down"></i>
+                            <i class="fa fa-caret-up"></i>
+                        </th>
+                        <th class="cursor_pointer">
+                            {% trans %}users_selection_desktop_4{% endtrans %}
+                            <i class="fa fa-caret-down"></i>
+                            <i class="fa fa-caret-up"></i>
+                        </th>
+                        <th class="cursor_pointer">
+                            {% trans %}users_selection_desktop_5{% endtrans %}
+                            <i class="fa fa-caret-down"></i>
+                            <i class="fa fa-caret-up"></i>
+                        </th>
+                        <th class="cursor_pointer">
+                            {% trans %}users_selection_desktop_6{% endtrans %}
+                            <i class="fa fa-caret-down"></i>
+                            <i class="fa fa-caret-up"></i>
+                        </th>
+                        <th class="cursor_pointer">
+                            {% trans %}users_selection_desktop_7{% endtrans %}
+                            <i class="fa fa-caret-down"></i>
+                            <i class="fa fa-caret-up"></i>
+                        </th>
+                        <th class="cursor_pointer">
+                            {% trans %}users_selection_desktop_8{% endtrans %}
+                            <i class="fa fa-caret-down"></i>
+                            <i class="fa fa-caret-up"></i>
+                        </th>
+                        <th class="cursor_pointer">
+                            {% trans %}users_selection_desktop_9{% endtrans %}
+                            <i class="fa fa-caret-down"></i>
+                            <i class="fa fa-caret-up"></i>
+                        </th>
+                        <th class="cursor_pointer">
+                            {% trans %}users_selection_desktop_10{% endtrans %}
+                            <i class="fa fa-caret-down"></i>
+                            <i class="fa fa-caret-up"></i>
+                        </th>
+                    </tr>
+                </thead>
+                <tbody class="table_tbody">
+                    {{response.values.list|raw}}
+                </tbody>
+            </table>
+        </div>
     </div>
-    <button id="cp_users_selection_send" class="button_custom" type="button">{% trans %}button_4{% endtrans %}</button>
+    <button id="cp_users_button_selection_desktop" class="button_custom" type="button">{% trans %}button_4{% endtrans %}</button>
 </div>
+
 <div id="cp_users_selection_mobile" class="display_mobile">
     {% form_theme form "bootstrap_3_layout.html.twig" %}
 
     <div class="row">
         <div class="col-md-6">
-            <form id="form_cp_users_selection" action="{{path("cp_users_selection", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+            <form id="cp_users_form_selection_mobile" action="{{path("cp_user_profile_result", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
                 {{form_row(form.id, {'label': "users_selection_2"})}}
 
                 {{form_widget(form._token)}}
@@ -20,4 +84,5 @@
         </div>
     </div>
 </div>
+            
 <div id="cp_user_selection_result"></div>
