--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/page_profile.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/page_profile.html.twig
@@ -6,7 +6,7 @@
 
         {{-render(controller("UebusaitoBundle:Language:page", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
 
-        <form id="form_cp_page_profile" action="{{path("cp_page_profile", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+        <form id="form_cp_page_profile" action="{{path("cp_page_profile_save", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
             {{form_row(form.language, {'label': "page_profile_2"})}}
             
             <div class="form-group">
@@ -60,8 +60,9 @@
             <input class="button_custom" type="submit" value="{% trans %}button_3{% endtrans %}"/>
         </form>
         
-        {% if is_granted("ROLE_ADMIN") == true and urlExtra > 5 %}
-            {{-render(controller("UebusaitoBundle:ControlPanel\\Page:deletion", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
+        {% if is_granted("ROLE_ADMIN") == true and response.values.id > 5 %}
+            {#{-render(controller("UebusaitoBundle:ControlPanel\\Page:deletion", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}#}
+            {{-include("@UebusaitoBundleViews/render/control_panel/page_deletion.html.twig")-}}
         {% endif %}
     </div>
 </div>
