Code - Work in progress

--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel.html.twig
@@ -7,7 +7,7 @@
         </li>
         <li>
             <a href="{{path("root_render", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': "cp_payments"})}}">
-                <i class="fa fa-shopping-cart"></i> {% trans %}control_panel_2{% endtrans %}
+                <i class="fa fa-credit-card-alt"></i> {% trans %}control_panel_2{% endtrans %}
             </a>
         </li>
     {% endif %}
